Updating main page and chaning cc files to match

--- a/index.html
+++ b/index.html
@@ -7,41 +7,24 @@
         <meta name="description" content="Good Vibe Tribe">
         <meta name="author" content="Kyle Leon">
         <meta name="robots" content="noindex">
-        <title>GVT Offical Site</title>
+        <title>Kyle Leon</title>
         <link rel="icon" type="image/x-icon" href="images/GVT Logo.png">
-        <link rel="stylesheet" href="GVT.css">
+        <link rel="stylesheet" href="Kyle.css">
     </head>
 
     <body id="background">
         <div id="container" align="center">
             <div id="block1" align="center">
                 <img src="images/GVT Logo.png" width="192px" height="108px">
-                <h1 style="color:orange" align="center"><i>Welcome to the Good Vibe Tribe Offical Site!</i></h1>
+                <h1 style="color:orange" align="center"><i>Welcome to me website!</i></h1>
             </div>
             <div id="block2" align="center">
-                <h2 style="color:red" align="center" class="rfont"><a href="pages/donutnov.html">IT'S DONUT NOVEMBER! CLICK HERE TO SEE THE RANKINGS!</a></h2>
+                <h2 style="color:red" align="center" class="rfont"></h2>
             </div>
             <div id="block3" align="center">
-                <h2 style="color:orangered" align="center" class="rfont">Meet The Execs</h2>
-                <table border="2" width="500px" height="250px" align="center" class="rfont">
-                    <tr><td>Name</td><td>Position</td><td>Scale</td></tr>
-                    <tr><td>Kyle</td><td>HR</td><td>3</td></tr>
-                    <tr><td>Logan</td><td>Janitor</td><td>5</td></tr>
-                    <tr><td>Ryan</td><td>Presenter</td><td>4</td></tr>
-                    <tr><td>Edric</td><td>Presenter</td><td>6</td></tr>
-                    <tr><td>Matt</td><td>CEO</td><td>2</td></tr>
-                    <tr><td>Tanaka</td><td>Sigma</td><td>6</td></tr>
-                </table>
-
-                <h3 style="color: orangered" align="center" class="rfont">Please fill out this quick survey</h3>
-                <form action="https://forms.gle/w2pjjW2EX3xrJvhb6" align="center" class="rfont">
-                    <input type="submit" value="Survey"> </input>
-                </form>
-
-                <h2 style="color:greenyellow" align="center" class="rfont">Past Flyers</h2>
-                <video width="320" height="240" controls>
-                    <source src="Sussy baka bye bye tanaka.mp4" type="video/mp4">
-                </video>
+                <h2 style="color:orangered" align="center" class="rfont">Nice to meet you!</h2>
+                    <p>
+                        My name is Kyle Leon and I am a recent graduate from Santa Clara University! I am currently pursuing a career in data analytics, as the potential of data fascinates me.</p>
             </div>
         </div>
     </body>
