--- a/pages/donutnov.html
+++ b/pages/donutnov.html
@@ -9,7 +9,7 @@
         <meta name="robots" content="noindex">
         <title>GVT Offical Site</title>
         <link rel="icon" type="image/x-icon" href="..\images\GVT Logo.png">
-        <link rel="stylesheet" href="..\GVT.css">
+        <link rel="stylesheet" href="..\Kyle.css">
     </head>
     <!-- Countdown Script -->
     <script src="..\scripts\counters.js"></script>
