--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta name="description" content="Good Vibe Tribe">
+        <meta name="description" content="Kyle's Website">
         <meta name="author" content="Kyle Leon">
         <meta name="robots" content="noindex">
         <title>Kyle Leon</title>
