--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="container" align="center">
             <div id="block1" align="center">
                 <img src="images/GVT Logo.png" width="192px" height="108px">
-                <h1 style="color:orange" align="center"><i>Welcome to me website!</i></h1>
+                <h1 style="color: rgb(129, 23, 129)" align="center"><i>Welcome to My Website!</i></h1>
             </div>
             <div id="block2" align="center">
                 <h2 style="color:red" align="center" class="rfont"></h2>
