Revamped the website and added another page

--- a/index.html
+++ b/index.html
@@ -16,15 +16,23 @@
         <div id="container" align="center">
             <div id="block1" align="center">
                 <img src="images/GVT Logo.png" width="192px" height="108px">
-                <h1 style="color: rgb(129, 23, 129)" align="center"><i>Welcome to My Website!</i></h1>
+                <h1 style="color: rgb(129, 23, 129)" align="center" class="rfont"><i>Welcome to My Website!</i></h1>
             </div>
             <div id="block2" align="center">
-                <h2 style="color:red" align="center" class="rfont"></h2>
+                <ul class="menu">
+                    <li class="menu"><a class="menu" href="index.html">Home</a></li>
+                    <li class="menu"><a class="menu" href="pages/donutnov.html">About</a></li>
+                    <li class="menu"><a class="menu" href="contact">Contact</a></li>
+                    <li class="menu"><a class="menu" href="comment">Comment</a></li>
+                    <li class="menu"><a class="menu" href="video">Video</a></li>
+                </ul>
             </div>
             <div id="block3" align="center">
-                <h2 style="color:orangered" align="center" class="rfont">Nice to meet you!</h2>
-                    <p>
-                        My name is Kyle Leon and I am a recent graduate from Santa Clara University! I am currently pursuing a career in data analytics, as the potential of data fascinates me.</p>
+                <h2 style="color:whitesmoke" align="center" class="rfont">Nice to meet you!</h2>
+                    <p style="color:whitesmoke" class="rfont">
+                        My name is Kyle Leon and I am a recent graduate from Santa Clara University! 
+                        I am currently pursuing a career in data analytics, as the potential of data fascinates me.
+                    </p>
             </div>
         </div>
     </body>
