--- a/pages/donutnov.html
+++ b/pages/donutnov.html
@@ -7,30 +7,18 @@
         <meta name="description" content="Good Vibe Tribe">
         <meta name="author" content="Kyle Leon">
         <meta name="robots" content="noindex">
-        <title>GVT Offical Site</title>
+        <title>Kyle Leon</title>
         <link rel="icon" type="image/x-icon" href="..\images\GVT Logo.png">
         <link rel="stylesheet" href="..\Kyle.css">
     </head>
     <!-- Countdown Script -->
     <script src="..\scripts\counters.js"></script>
     <body id="background">
-        <div class="banner"></div>
         <div id="container">
             <div id="block3">
                 <h1 align="center" style="font-size: 75px;" class="rfont">Days Left...</h1>
                 <b><div align="center" id="countdown" class="counter"></div></b>
                 <h2 style="color:rgb(57, 79, 23); font-family:'Courier New', Courier, monospace;" align="center" >Meet The Contestants!</h2>
-                <table border="1" width="500px" height="350px" align="center"class="rfont">
-                    <tr><td>Contestant</td><td>Days Survived</td><td>Donuts Owed</td></tr>
-                    <tr><td align="center"><img src="..\images\Kyle.jpg" width="60" height="80"><div align="center">Kyle</div></td><td><script src="..\scripts\kylecounter.js"></script><p id="kyle"></p></td><td>0</td></tr>
-                    <tr><td align="center"><img src="..\images\Logan.jpg" width="60" height="80"><div align="center">Logan</div></td><td><script src="..\scripts\logancounter.js"></script><p id="logan"></p></td><td>0</td></tr>
-                    <tr><td align="center"><img src="..\images\Ryan.jpg" width="60" height="80"><div align="center">Ryan</div></td><td><script src="..\scripts\ryancounter.js"></script><p id="ryan"></p></td><td>0</td></tr>
-                    <tr><td align="center"><img src="..\images\Edric.jpg" width="60" height="80"><div align="center">Edric</div><td><script src="..\scripts\edriccounter.js"></script><p id="edric"></p></td><td>0</td></tr>
-                    <tr><td align="center"><img src="..\images\Matt.jpg" width="60" height="80"><div align="center">Matt</div></td><td><script src="..\scripts\mattcounter.js"></script><p id="matt"></p></td><td>0</td></tr>
-                    <tr><td align="center"><img src="..\images\Tanaka.jpg" width="60" height="80"><div align="center">Tanaka</div></td><td><script src="..\scripts\tanakacounter.js"></script><p id="tanaka"></p></td><td>0</td></tr>
-                    <tr><td align="center"><img src="..\images\Justin.jpg" width="60" height="80"><div align="center">Justin</div></td><td><script src="..\scripts\justincounter.js"></script><p id="justin"></p></td><td>0</td></tr>
-                    <tr><td align="center"><img src="..\images\Landis.jpg" width="60" height="80"><div align="center">Landis</div></td><td><script src="..\scripts\landiscounter.js"></script><p id="landis"></p></td><td>0</td></tr>
-                </table>
                 <a href="..\index.html"><h3 style="color: orangered" align="center" class="rfont">Click here to go back to the main page</h3></a>
             </div>
         </div>
