--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Kyle Leon">
         <meta name="robots" content="noindex">
         <title>Kyle Leon</title>
-        <link rel="icon" type="image/x-icon" href="images/GVT Logo.png">
+        <link rel="icon" type="image/x-icon" href="">
         <link rel="stylesheet" href="Kyle.css">
     </head>
 
