--- a/index.html
+++ b/index.html
@@ -10,28 +10,54 @@
         <title>Kyle Leon</title>
         <link rel="icon" type="image/x-icon" href="">
         <link rel="stylesheet" href="Kyle.css">
+        <style>
+            #container {
+                width:80%;
+                height:100%;
+                margin:auto;
+            }
+            #block1 {
+                background-color: rgb(174, 174, 174);
+                width:100%;
+                height:27%;
+                float: right;
+            }
+            #block2 {
+                background-color: #e8e7df;
+                width:100%;
+                height:8%;
+                float: right;
+            }
+            #block3 {
+                background-color: rgb(221, 206, 221);
+                width:100%;
+                height:65%;
+                float:right;
+            }
+        </style>
     </head>
 
     <body id="background">
         <div id="container" align="center">
             <div id="block1" align="center">
-                <img src="images/GVT Logo.png" width="192px" height="108px">
-                <h1 style="color: rgb(129, 23, 129)" align="center" class="rfont"><i>Welcome to My Website!</i></h1>
+                <h1 style="color: rgb(129, 23, 129); font-size: 75px;" align="center" class="rfont"><i>Welcome to My Website!</i></h1>
             </div>
             <div id="block2" align="center">
                 <ul class="menu">
                     <li class="menu"><a class="menu" href="index.html">Home</a></li>
-                    <li class="menu"><a class="menu" href="pages/donutnov.html">About</a></li>
-                    <li class="menu"><a class="menu" href="contact">Contact</a></li>
-                    <li class="menu"><a class="menu" href="comment">Comment</a></li>
-                    <li class="menu"><a class="menu" href="video">Video</a></li>
+                    <li class="menu"><a class="menu" href="pages/donutnov.html">Countdown</a></li>
+                    <li class="menu"><a class="menu" href="pages/contact.html">Contact</a></li>
+                    <li class="menu"><a class="menu" href="comment">GitHub</a></li>
+                    <li class="menu"><a class="menu" href="video">Past Projects</a></li>
                 </ul>
             </div>
             <div id="block3" align="center">
-                <h2 style="color:whitesmoke" align="center" class="rfont">Nice to meet you!</h2>
-                    <p style="color:whitesmoke" class="rfont">
+                <h2 style="color:black" align="center" class="rfont">Nice to meet you!</h2>
+                    <p style="color:black" class="rfont" align="center">
                         My name is Kyle Leon and I am a recent graduate from Santa Clara University! 
-                        I am currently pursuing a career in data analytics, as the potential of data fascinates me.
+                        I am currently pursuing a career in data analytics, as the potential of data fascinates me. 
+                        In my free time, I enjoy working on various projects or playing a games (both video and board)! As you may have noticed, this website is one of the projects I am currently working on.
+                        Please be patient as some of these links are still under construction.
                     </p>
             </div>
         </div>
