--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,8 +15,6 @@
                 width:80%;
                 height:100%;
                 margin:auto;
-                border-color: red;
-                border-style: dashed;
             }
             #block1 {
                 background-color: rgb(174, 174, 174);
@@ -27,7 +25,7 @@
             #block2 {
                 background-color: #e8e7df;
                 width:100%;
-                height:8%;
+                height:100%;
                 float: right;
             }
             #block3 {
@@ -38,14 +36,12 @@
             }
         </style>
     </head>
-    <!-- Countdown Script -->
-    <script src="..\scripts\counters.js"></script>
     <body id="background">
         <div id="container">
-            <div id="block3">
-                <h1 align="center" style="font-size: 75px;" class="rfont">Days Left...</h1>
-                <b><div align="center" id="countdown" class="counter"></div></b>
-                <a href="..\index.html"><h3 style="color: orangered" align="center" class="rfont">Click here to go back to the main page</h3></a>
+            <div id="block2">
+                <h1 align="center" style="font-size: 75px;" class="rfont">Contact me</h1>
+                <b><a href="https://www.linkedin.com/in/kyle-leon/">Linkedin</a></b>
+                <a href="..\index.html"><h3 style="color: purple" align="center" class="rfont">Click here to go back to the main page</h3></a>
             </div>
         </div>
     </body>
