--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <li class="menu"><a class="menu" href="index.html">Home</a></li>
                     <li class="menu"><a class="menu" href="pages/donutnov.html">Countdown</a></li>
                     <li class="menu"><a class="menu" href="pages/contact.html">Contact</a></li>
-                    <li class="menu"><a class="menu" href="comment">GitHub</a></li>
-                    <li class="menu"><a class="menu" href="video">Past Projects</a></li>
+                    <li class="menu"><a class="menu" href="https://github.com/butterblocks">GitHub</a></li>
+                    <li class="menu"><a class="menu" href="https://github.com/butterblocks">Past Projects</a></li>
                 </ul>
             </div>
             <div id="block3" align="center">
