--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p style="color:black" class="rfont" align="center">
                         My name is Kyle Leon and I am a recent graduate from Santa Clara University! 
                         I am currently pursuing a career in data analytics, as the potential of data fascinates me. 
-                        In my free time, I enjoy working on various projects or playing a games (both video and board)! As you may have noticed, this website is one of the projects I am currently working on.
+                        In my free time, I enjoy working on various projects, trying new food spots, or playing a games (both video and board)! As you may have noticed, this website is one of the projects I am currently working on.
                         Please be patient as some of these links are still under construction.
                     </p>
             </div>
