Visual updates to main page, took out unnecessary links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             #block1 {
                 background-color: rgb(248, 247, 247);
                 width:100%;
-                height:27%;
+                height:20%;
                 float: right;
             }
             #block2 {
@@ -40,15 +40,14 @@
     <body id="background">
         <div id="container" align="center">
             <div id="block1" align="center">
-                <h1 style="color: rgb(129, 23, 129); font-size: 75px;" align="center" class="rfont"><i>Welcome to My Website!</i></h1>
+                <h1 style="color: rgb(129, 23, 129); font-size: 75px;" align="center" class="rfont"><i>Welcome to Kyle's Website!</i></h1>
             </div>
             <div id="block2" align="center">
                 <ul class="menu">
                     <li class="menu"><a class="menu" href="index.html">Home</a></li>
-                    <li class="menu"><a class="menu" href="pages/donutnov.html">Countdown</a></li>
                     <li class="menu"><a class="menu" href="pages/contact.html">Contact</a></li>
                     <li class="menu"><a class="menu" href="https://github.com/butterblocks">GitHub</a></li>
-                    <li class="menu"><a class="menu" href="https://github.com/butterblocks">Past Projects</a></li>
+                    <li class="menu"><a class="menu" href="https://github.com/butterblocks/Projects">Past Projects</a></li>
                 </ul>
             </div>
             <div id="block3" align="center">
