Removed more unnecessary files and adjusted the contact and index pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div id="block3" align="center">
                 <h2 style="color:black" align="center" class="rfont">Nice to meet you!</h2>
-                    <p style="color:black" class="rfont" align="center">
+                    <p style="color:black; width: 50%" class="rfont" align="left">
                         My name is Kyle Leon and I am a recent graduate from Santa Clara University! 
                         I am currently pursuing a career in data analytics, as the potential of data fascinates me. 
                         In my free time, I enjoy working on various projects, trying new food spots, or playing a games (both video and board)! As you may have noticed, this website is one of the projects I am currently working on.
