--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,19 +16,19 @@
                 margin:auto;
             }
             #block1 {
-                background-color: rgb(174, 174, 174);
+                background-color: rgb(248, 247, 247);
                 width:100%;
-                height:27%;
+                height:20%;
                 float: right;
             }
             #block2 {
                 background-color: #e8e7df;
                 width:100%;
-                height:100%;
+                height:70%;
                 float: right;
             }
             #block3 {
-                background-color: rgb(199, 62, 199);
+                background-color: rgb(221, 206, 221);
                 width:100%;
                 height:65%;
                 float:right;
@@ -37,12 +37,19 @@
     </head>
     <body id="background">
         <div id="container">
-            <div id="block2">
-                <h1 align="center" style="font-size: 75px;" class="rfont">Contact me</h1>
-                <b><a href="https://www.linkedin.com/in/kyle-leon/">Linkedin</a></b>
-                <br>
-                <b>Email: keleon@alumni.scu.edu</b>
-                <a href="..\index.html"><h3 style="color: purple" align="center" class="rfont">Click here to go back to the main page</h3></a>
+            <div id="block1">
+                <h1 align="center" style="font-size: 75px; color: rgb(129, 23, 129);" class="rfont"><i>Contact Information</i></h1>
+            </div>
+            <div id="block3" align="center">
+                <ul class="menu">
+                    <li class="menu"><a class="menu" href="..\index.html">Home</a></li>
+                    <li class="menu"><a class="menu" href="contact.html">Contact</a></li>
+                    <li class="menu"><a class="menu" href="https://github.com/butterblocks">GitHub</a></li>
+                    <li class="menu"><a class="menu" href="https://github.com/butterblocks/Projects">Past Projects</a></li>
+                </ul>
+                <br><p style="font-size: 20px;" class="rfont">Feel free to shoot me an email if you have any questions or wish to get in contact with me! I also check my Linkedin often, so you can connect with me there as well!</p>
+                <br><p style="font-size: 18px;" class="rfont"><a href="https://www.linkedin.com/in/kyle-leon/">Linkedin</a></b></p><b>
+                <br><b>Email: keleon@alumni.scu.edu</b>
             </div>
         </div>
     </body>
